- AppLogger created and property added in AppViewModel and AppFragment - Read Properties by using AppProperties.java as singleton (not tested) - AppApplication extends Application - Model extended: DetailedTimer, TABS, TimerGroup implemented - DummyNudelGericht with realistic data created

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,7 +15,12 @@ android {
         enabled = true
     }
     buildTypes {
+        def loglevel = "logLevel"
+        debug {
+            buildConfigField "String", loglevel, "\"verbose\""
+        }
         release {
+            buildConfigField "String", loglevel, "\"info\""
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android-optimize.txt'), 'proguard-rules.pro'
         }
