--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,6 +3,7 @@
     package="de.softinva.multitimer">
 
     <application
+        android:name=".AppApplication"
         android:allowBackup="true"
         android:icon="@drawable/logo_fertig"
         android:label="@string/app_name"
